[package]
name = "shocke_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shocke_rs"
path = "shocke.rs"

[[example]]
name = "capture"
path = "examples/capture.rs"

[dependencies]
ctrlc = "3.5.0"
hackrf-rs = { path = "hackrf-rs" }
num-complex = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"


